# temp-dpo-v1

./: .gitignore  AGENTS.md  README.md  batch_log_prob.py  config_dpo.yaml  dataset_process.py  dpo_loss_v1.py  init_training.sh  main.py  model_utils.py  preference_datasets.py  pyproject.toml  requirements.txt  sft_training.py  training.py  utils.py
config/: config_dpo.yaml
