[project]
name = "temp-dpo-v1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.47.0",
    "bs4>=0.0.2",
    "datasets>=4.4.2",
    "numpy>=2.4.0",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
